--- a/priv/static/templates/header.html
+++ b/priv/static/templates/header.html
@@ -8,8 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Théophile de Cagny">
     <!-- @TODO: change development for production, by using eex & mix env for example -->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
+
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <!-- @TODO: change all calls using axios to fetch, then delete dependency -->
     <script src="https://unpkg.com/axios/dist/axios.min.js" crossorigin></script>
     <script src="https://use.fontawesome.com/d9323d863e.js"></script>
