--- a/web/custom.css
+++ b/web/custom.css
@@ -131,6 +131,9 @@ a {
 .page-title.welcome-page-title {
     margin: 20px;
 }
+.appointment-schedule-item.clickable:hover {
+    background-color: linear-gradient(90deg, #318ce7 0%, #26619C 100%);
+}
 .clickable {
     cursor: pointer;
 }
@@ -485,6 +488,7 @@ a {
     display: flex;
     flex: 1 1 0;
     align-items: center;
+    justify-content: space-between;
     padding: 5px 1.5vw;
     color: white;
     border-radius: 10px;
@@ -494,6 +498,15 @@ a {
 .appointment-schedule-item.reserved {
     background: linear-gradient(90deg, #318ce7 0%, #26619C 100%);
 }
+.appointment-pictos {
+    display: flex;
+}
+.appointment-picto {
+    width: 1vw;
+    min-width: 10px;
+    padding-left: 1vw;
+}
+
 /* COACH LIST */
 
 .coach-list-wrapper {
@@ -512,11 +525,13 @@ a {
     align-items: center;
     background-color: white;
     color: black;
+    margin: 15px 0;
     padding: 8px 12px;
     border-radius: 50px;
     border: 1px solid grey;
     box-shadow: 0px 0px 3px 1px darkslategrey;
     -webkit-box-shadow: 0px 0px 3px 1px darkslategrey;
+    cursor: pointer;
 }
 .coach-list-row:hover {
     box-shadow: 0px 0px 5px 2px darkslategrey;
@@ -1242,6 +1257,10 @@ a {
     justify-content: space-around;
 }
 
+.details-visioLink-section {
+    padding: 12px 8px;
+}
+
 /* LOGO */
 .navbar-logo-section {
     display: flex;
@@ -1261,6 +1280,11 @@ a {
 }
 
 /* FOOTER */
+
+.clab-link {
+    color: #26619C;
+    cursor: pointer;
+}
 
 .footer {
     background: #26619C;
