--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -3,7 +3,7 @@
     <title>Coach Lab</title>
     <meta charset="UTF-8">
     <!-- @TODO: define extensive list of SEO keyword -->
-    <meta name="keywords" content="Coach, Coaching, Coach sportif, Coach de vie, Plateforme de coaching">
+    <meta name="keywords" content="Coach, Coaching, Coach sportif, Coach de vie, Plateforme de coaching, Visio-conférence, live vidéo">
     <meta name="description" content="Plateforme complète pour coaching">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Théophile de Cagny">
