--- a/priv/static/custom.css
+++ b/priv/static/custom.css
@@ -90,31 +90,30 @@ img {
 .mt-1 {
     margin-top: 10px;
 }
-
 .mt-2 {
     margin-top: 20px;
 }
-
+.mr-1 {
+    margin-right: 10px;
+}
+.mr-2 {
+    margin-right: 20px;
+}
 .pt-1 {
     padding-top: 10px;
 }
-
 .pt-2 {
     padding-top: 20px;
 }
-
 .ml-1 {
     margin-left: 10px;
 }
-
 .ml-2 {
     margin-left: 20px;
 }
-
 .pl-1 {
     padding-left: 10px;
 }
-
 .pl-2 {
     padding-left: 20px;
 }
@@ -845,6 +844,7 @@ a {
     display: flex;
     top: 0;
     right: 0;
+    margin-top: 20px;
 }
 
 .landing-inscription-card-button.blue-bg {
@@ -1243,7 +1243,7 @@ a {
     margin: 1vh auto;
 }
 
-.button-group {
+.flex-end {
     justify-content: flex-end;
 }
 
@@ -1298,10 +1298,6 @@ a {
 
 .fa {
     font-family: 'FontAwesome';
-}
-
-.input-group.radio-group {
-    justify-content: space-between ;
 }
 
 .radio-label {
@@ -1411,7 +1407,6 @@ a {
 .landing-page-desktop-signup-button {
     padding: 10px 36px;
     color: black;
-    margin-top: 20px;
     margin-right: 20px;
 }
 
@@ -1534,6 +1529,11 @@ a {
     }
     .landing-intermediary-logo {
         height: 40px;
+        margin-left: 0;
+    }
+    .landing-intermediary-connection-button {
+        padding: 6px 6px;
+        margin-right: 5px;
     }
     .cl-input {
         max-width: 70vw;
