--- a/web/custom.css
+++ b/web/custom.css
@@ -93,6 +93,12 @@ img {
 .mt-2 {
     margin-top: 20px;
 }
+.mb-1 {
+    margin-bottom: 10px;
+}
+.mb-2 {
+    margin-bottom: 20px;
+}
 .mr-1 {
     margin-right: 10px;
 }
@@ -199,13 +205,13 @@ a {
 }
 
 .cl-button:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
 }
 
 .cl-button.bg-white:hover {
-    box-shadow: 0px 0px 5px 2px white;
-    -webkit-box-shadow: 0px 0px 5px 2px white;
+    box-shadow: 0px 0px 5px 1px white;
+    -webkit-box-shadow: 0px 0px 5px 1px white;
 }
 
 .cl-form-button {
@@ -227,14 +233,14 @@ a {
 }
 
 .cl-input:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
     border: none;
     outline: none;
 }
 .cl-input:focus, .cl-input:focus-visible {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
     border: none;
     outline: none;
 }
@@ -355,8 +361,8 @@ a {
 }
 
 .file-input-label:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
 }
 
 .file-input-filename {
@@ -753,7 +759,7 @@ a {
     justify-content: space-between;
     flex-grow: 1;
     font-weight: bold;
-    color: #318CE7;
+    color: #26619C;
     margin-top: 6px;
 }
 .navbar-wrapper.blue-bg .menu-section {
@@ -1252,6 +1258,9 @@ a {
     margin-bottom: 5px;
 }
 
+.flex.inline {
+    flex-direction: row;
+}
 .centered-text {
     text-align: center;
 }
