--- a/priv/static/custom.css
+++ b/priv/static/custom.css
@@ -205,13 +205,13 @@ a {
 }
 
 .cl-button:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
 }
 
 .cl-button.bg-white:hover {
-    box-shadow: 0px 0px 5px 2px white;
-    -webkit-box-shadow: 0px 0px 5px 2px white;
+    box-shadow: 0px 0px 5px 1px white;
+    -webkit-box-shadow: 0px 0px 5px 1px white;
 }
 
 .cl-form-button {
@@ -233,14 +233,14 @@ a {
 }
 
 .cl-input:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
     border: none;
     outline: none;
 }
 .cl-input:focus, .cl-input:focus-visible {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
     border: none;
     outline: none;
 }
@@ -361,8 +361,8 @@ a {
 }
 
 .file-input-label:hover {
-    box-shadow: 0px 0px 5px 2px darkslategrey;
-    -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
+    box-shadow: 0px 0px 5px 1px darkslategrey;
+    -webkit-box-shadow: 0px 0px 5px 1px darkslategrey;
 }
 
 .file-input-filename {
@@ -545,11 +545,11 @@ a {
 }
 .appointment-picto {
     width: 1vw;
-    min-width: 10px;
+    min-width: 20px;
     padding-left: 1vw;
 }
 .appointment-picto.video {
-    min-width: 15px;
+    min-width: 25px;
 }
 
 /* COACH LIST */
@@ -562,7 +562,6 @@ a {
     margin: 0 10vw;
     padding: 10px 0;
 }
-
 .coach-list-row {
     display: flex;
     flex-direction: row;
@@ -582,7 +581,6 @@ a {
     box-shadow: 0px 0px 5px 2px darkslategrey;
     -webkit-box-shadow: 0px 0px 5px 2px darkslategrey;
 }
-
 .coach-list-avatar {
     height: 40px;
     width: 40px;
@@ -1239,6 +1237,7 @@ a {
 
 .cl-input.white-bg {
     border: 2px solid #26619C;
+    border: 1.5px solid #26619C;
 }
 
 .input-group {
@@ -1366,10 +1365,9 @@ a {
     color: white;
     padding-bottom: 2vh;
 }
-.footer-link {
+.footer-text {
     margin-left: 35px;
 }
-
 .footer-link:hover {
     background: white;
     padding: 12px 18px;
