--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -14,7 +14,7 @@
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <!-- @TODO: change all calls using axios to fetch, then delete dependency -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js" crossorigin></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" crossorigin></script>
     <script src="https://use.fontawesome.com/d9323d863e.js"></script>
     <script src="https://kit.fontawesome.com/d9d5875839.js" crossorigin="anonymous"></script>
     <script src="/priv/static/http.js"></script>
