--- a/web/custom.css
+++ b/web/custom.css
@@ -1271,22 +1271,26 @@ a {
 }
 
 .select-autocomplete-wrapper {
-    position: absolute;
-    bottom: -20px;
     width: 100%;
     border: 1px solid black;
     background: white;
     z-index: 9;
     display: flex;
     flex-direction: column;
+    border-radius: 20px;
+    margin-top: -18px;
 }
 
 .select-autocomplete-option {
     font-weight: bold;
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
     border-bottom: 1px solid black;
     cursor: pointer;
     color: black;
+}
+
+.select-autocomplete-option:last-of-type {
+    border-bottom: none;
 }
 
 
