--- a/priv/static/emails/forgotten-password.html.eex
+++ b/priv/static/emails/forgotten-password.html.eex
@@ -1,4 +1,5 @@
 <html>
   <body>
-    Cliquez ici pour définir un nouveau mot de passe sur CoachLab: https://www.coachlab.fr/mot-de-passe-oublie?token=<%=hash%><br/>
+    Cliquez sur le lien pour définir un nouveau mot de passe sur CoachLab:
+    <a href="<%= base_url %>/mot-de-passe-oublie?token=<%= hash %>"> <%= base_url %>/mot-de-passe-oublie?token=<%= hash %> </a> <br/>
   </body>
